--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,22 @@
-*.class
-*.log
+# ===============================================
+# ------------ macOS related ignores ------------
+.DS_Store
+**/.DS_Store
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# ===============================================
+# --------- sbt project related ignores ---------
+.bsp/*/
+.metals
+.bloop/*/
+project/*/
+target
+
+# ===============================================
+# ------------ scala related ignores ------------
+*.class
+
+# ===============================================
+# ---------- data file related ignores ----------
+# ...
+
+
